syntax = "proto3";

package Calculator;

message SumRequest {
	int32 value1 = 1;
	int32 value2 = 2;
}

message SumResponse {
	int32 result = 1;
}

message AverageRequest {
	int32 value = 1;
}

message AverageResponse {
	double result = 1;
}

service CalculatorService {
	rpc CalculateSum(SumRequest) returns (SumResponse){}
	rpc CalculateAverage(stream AverageRequest) returns (AverageResponse){}
}
